syntax = "proto3";

package user.v1;

import "user/v1/user.proto";

option go_package = "github.com/dharmavagabond/simple-bank";

message CreateUserRequest {
  string username = 1;
  string full_name = 2;
  string email = 3;
  string password = 4;
}

message CreateUserResponse {
  User user = 1;
}
