syntax = "proto3";

package user.v1;

import "google/api/annotations.proto";
import "protoc-gen-openapiv2/options/annotations.proto";
import "user/v1/rpc_create_user.proto";
import "user/v1/rpc_login_user.proto";
import "user/v1/rpc_update_user.proto";

option go_package = "github.com/dharmavagabond/simple-bank";
option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_swagger) = {
  info: {
    title: "Simple Bank API";
    version: "1.1";
    contact: {
      name: "Dharma's project";
      url: "https://github.com/dharmavagabond/simple-bank";
      email: "dharma@duck.com";
    };
  };
};

service SimpleBankService {
  rpc CreateUser(CreateUserRequest) returns (CreateUserResponse) {
    option (google.api.http) = {
      post: "/v1/create_user"
      body: "*"
    };
  }
  rpc UpdateUser(UpdateUserRequest) returns (UpdateUserResponse) {
    option (google.api.http) = {
      patch: "/v1/update_user"
      body: "*"
    };
  }
  rpc LoginUser(LoginUserRequest) returns (LoginUserResponse) {
    option (google.api.http) = {
      post: "/v1/login_user"
      body: "*"
    };
  }
}
